миграция с fluentbit на fluentd

--- a/configuration/fluentbit/fluent-bit.conf
+++ b/configuration/fluentbit/fluent-bit.conf
@@ -1,14 +1,14 @@
-[SERVICE]
-    parser_file     parsers.conf
+# [SERVICE]
+#     parser_file     parsers.conf
 
 [INPUT]
     Name            tail
     path            /log-pom/*.csv
 
-[FILTER]
-    Name            parser
-    Match           *
-    Parser          radarlog
+# [FILTER]
+#     Name            parser
+#     Match           *
+#     Parser          radarlog
 
 [OUTPUT]
     Name            kafka
