обновление композера, добавлена инциализация бд

--- a/configuration/fluentd/fluent.conf
+++ b/configuration/fluentd/fluent.conf
@@ -4,8 +4,7 @@
     tag pom.vitalsigns
     <parse>
         @type csv
-        keys time, heartRate_out, breathRate_out, heartRate_out_CM, heartRate_4Hz_CM, heartRate_xCorr_CM
-        time_key time
+        keys time, heartRate_out, breathRate_out
     </parse>
 </source>
 
